[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gxipy"
version = "2.0.2105.9261"
description = "Daheng Imaging Python SDK"
license = {text = "MIT"}
requires-python = ">=3.7"
dependencies = [
    "numpy",
]

[project.urls]
Homepage = "https://en.daheng-imaging.com"

[tool.setuptools.packages.find]
include = ["gxipy*"] 